# QuadREX

./: .gitignore  README.md
Assistant/: flowchart.md  readData.py  text2speech.py  wakeWordDetection.py  watson.py
CAD/: Battery Pack.3mf  Buck DC-DC Bracket.3mf  Camera Bracket.3mf  Chassis.3mf  Front Cover.3mf  Front Sensor Bracket.3mf  Front Shell.3mf  LIDAR Bracket.3mf  Leg Assembly.3mf  Mid Shell.3mf  Pi Holder.3mf  Rear Cover.3mf  Rear Shell.3mf  Rear Switch Holder.3mf  Servo PWM Bracket.3mf  Top Switch Holder.3mf  URDF Model.3mf
Gait-Sim/: gait.py  gaitPlot.py
Manual-Control/: controller.py
Manual-Control/movement/: kinematic_model.py  quadruped.py
Navigation-Sim/: frontier-sim.py  path-sim.py
REX/: FKSimulation.py  body.urdf  gaitPlot.py  inverseKinematics.py  walk.py
REX/meshes/: base_link.stl  lf_femur_1.stl  lf_tibia_1.stl  lr_femur_1.stl  lr_motor_1.stl  lr_tibia_1.stl  rf_femur_1.stl  rf_tibia_1.stl  rr_femur_1.stl  rr_tibia_1.stl
Robot-Sim/: body.urdf  simulation.py  timings_0.json
Robot-Sim/meshes/: fr_motor_1.stl  lf_motor_1.stl  lf_tibia_1.stl  lr_femur_1.stl  lr_tibia_1.stl  rf_femur_1.stl  rf_foot_1.stl  rr_femur_1.stl  rr_tibia_1.stl
Stride/: bot_walk.py  controller.py
Tools/: getIP.py  oled_display.py
main/: controller.py
ros2-rex/: makefile
ros2-rex/src/rex/: package.xml  setup.cfg  setup.py
ros2-rex/src/rex/rex/: control_service.py  controller.py  detect_continuous.py  human_detect.py  tracklets_parser.py
ros2-rex/src/rex/rex/movement/: IK_solver.py  geometrics.py  js_test.py
web-app/: package-lock.json  package.json
(+50 files in other folders)
