<?xml version="1.0"?>
<package format="2">
  <name>rex</name>
  <version>0.0.0</version>
  <description>Tracklets parser for DepthAI tracklets</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>depthai_ros_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
